# py-ts-languange-collection

./: .gitignore  README.md  build.py  pyproject.toml  repos.txt
src/common/: __init__.py
src/ts_language_collection/: __init__.py  common.py  langs.py
