[tool.poetry]
name = "ts-language-collection"
version = "0.1.0"
description = ""
authors = ["kjetil midtlie <kjetil.midtlie@gmail.com>"]
readme = "README.md"
packages = [{include = "ts_language_collection", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
tree-sitter = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
